acomode los colores

--- a/test-official/styles.css
+++ b/test-official/styles.css
@@ -16,11 +16,11 @@ body{
 }
 
 .red-card{
-    background-color: #f86;
+    background-color: #E2642A;
 }
 
 .green-card{
-    background-color: #5b7;
+    background-color: #059781 ;
 }
 
 .card_title{
